RESOLVED FIXED156830
DFG del_by_id support forgets to set()
https://bugs.webkit.org/show_bug.cgi?id=156830
Summary DFG del_by_id support forgets to set()
Filip Pizlo
Reported 2016-04-20 19:12:36 PDT
Patch forthcoming.
Attachments
the patch (2.66 KB, patch)
2016-04-20 19:17 PDT, Filip Pizlo
no flags
the patch (1.99 KB, patch)
2016-04-20 19:20 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-04-20 19:17:37 PDT
Created attachment 276885 [details] the patch
WebKit Commit Bot
Comment 2 2016-04-20 19:19:11 PDT
Attachment 276885 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:4244: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2016-04-20 19:20:06 PDT
(In reply to comment #2) > Attachment 276885 [details] did not pass style-queue: > > > ERROR: Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:4244: One line > control clauses should not use braces. [whitespace/braces] [4] > Total errors found: 1 in 3 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style. Oops, I'll remove that.
Filip Pizlo
Comment 4 2016-04-20 19:20:26 PDT
Created attachment 276886 [details] the patch
Filip Pizlo
Comment 5 2016-04-20 19:35:30 PDT
Note You need to log in before you can comment on or make changes to this bug.