DFG del_by_id support forgets to set() https://bugs.webkit.org/show_bug.cgi?id=156830

Reviewed by Saam Barati.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):
* tests/stress/dfg-del-by-id.js: Added.



Canonical link: https://commits.webkit.org/174936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199801 268f45cc-cd09-0410-ab3c-d52691b4dbfc